--- a/Team-Mem/src/main/webapp/static/css/dash.css
+++ b/Team-Mem/src/main/webapp/static/css/dash.css
@@ -55,7 +55,8 @@
   justify-content: center;
 }
 .bottom {
-  margin: 10px;
+  margin: 2rem 10px 10px 10px;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -118,4 +119,21 @@
 
 .notice::-webkit-scrollbar-thumb:hover {
   background-color: #faaca8;
+}
+
+.noList_wrapper {
+  margin-top: 1.2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.noList {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #e9dcd6;
+  text-align: center;
+  padding: 3rem;
+  border-radius: 10px;
 }
