--- a/Team-Mem/src/main/webapp/static/css/notice_detail.css
+++ b/Team-Mem/src/main/webapp/static/css/notice_detail.css
@@ -1,49 +1,65 @@
 td.content {
-    display: none;
+  display: none;
 }
 th.content {
-    display: none;
+  display: none;
 }
 /* 모달 배경 */
 .modal-backdrop {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 반투명한 검은 배경 */
-    z-index: 998; /* 다른 요소보다 앞에 표시되도록 */
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명한 검은 배경 */
+  z-index: 998; /* 다른 요소보다 앞에 표시되도록 */
 }
 
 .modal-backdrop.show {
-    display: block;
+  display: block;
 }
 
 /* 모달 */
 .detail {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    z-index: 999; /* 다른 요소보다 앞에 표시되도록 */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* 그림자 효과 */
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  z-index: 999; /* 다른 요소보다 앞에 표시되도록 */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* 그림자 효과 */
 }
 
 .detail.show {
-    display: block;
-    width: 50%;
-    border-radius: 10px;
+  display: block;
+  width: 50%;
+  border-radius: 10px;
 }
 div.btn_box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    button {
-        width: 30%;
-        background-color: #e6cadd;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  button {
+    width: 30%;
+    background-color: #e6cadd;
+  }
+}
+.noList_wrapper {
+  margin-top: 1.2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.noList {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #e9dcd6;
+  text-align: center;
+  padding: 3rem;
+  border-radius: 10px;
 }
