--- a/Team-Mem/src/main/webapp/static/css/main.css
+++ b/Team-Mem/src/main/webapp/static/css/main.css
@@ -94,13 +94,11 @@ div.side {
 
 div.login_wrap,
 div.join_wrap {
-
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
-
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #faaca8;
+    background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
 }
 form.login {
     margin-top: 3rem;
@@ -147,52 +145,50 @@ form.login {
     }
 }
 form.join {
-
-  margin-top: 3rem;
-  width: 70%;
-  height: 80%;
-  background-color: #25293482;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-
-  h1.head {
-    color: #bec7d5;
-    font-weight: 200;
-    font-size: 2rem;
-    padding: 5px 12px;
-    margin: 1rem 0;
-    border-bottom: 1px solid;
-  }
-
-  div {
-    width: 100%;
+    margin-top: 3rem;
+    width: 70%;
+    height: 80%;
+    background-color: #25293482;
     display: flex;
     flex-direction: column;
-    div.join.error {
-      text-align: center;
-      color: #e46c7a;
-      size: 1.3rem;
-    }
-  }
-  input {
-    padding: 12px;
-    border: none;
-    outline: none;
-    background-color: #30373f;
-    margin: 5px auto;
-    width: 80%;
-    color: white;
-    font-size: 0.8rem;
-  }
-  button {
-    width: 30%;
-    margin: 1.5rem auto 0 auto;
-    font-weight: 200;
-  }
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 
+    h1.head {
+        color: #bec7d5;
+        font-weight: 200;
+        font-size: 2rem;
+        padding: 5px 12px;
+        margin: 1rem 0;
+        border-bottom: 1px solid;
+    }
+
+    div {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        div.join.error {
+            text-align: center;
+            color: #febb0b;
+            size: 1.3rem;
+        }
+    }
+    input {
+        padding: 12px;
+        border: none;
+        outline: none;
+        background-color: #fff;
+        border-radius: 3px;
+        margin: 5px auto;
+        width: 80%;
+        color: black;
+    }
+    button {
+        width: 30%;
+        margin: 1.5rem auto 0 auto;
+        font-weight: 200;
+    }
 }
 
 div.authenticated {
@@ -239,4 +235,3 @@ div.authenticated {
     -webkit-filter: saturate(0.2) opacity(0.5);
     cursor: not-allowed;
 }
-
